@@ -39,6 +39,7 @@
 - init qdn before use in get_query_dn().
 - fix typo in update_hosts_mounts().
 - fix hosts map update on reload.
+- make negative cache update consistent for all lookup modules.
 
 04/06/2014 autofs-5.1.0
 =======================
